--- a/2016-10-29-hello.md
+++ b/2016-10-29-hello.md
@@ -2,3 +2,11 @@
 layout: post # Sustituye el layout si lo usas uno diferente
 title: hello # Nombre generado automáticamente
 ---
+# hola
+
+codigo `codigo`
+```codigo``` kotlin
+
+
+
+
