Update and rename 2016-10-29-hello.md to 2016-10-29-hello2.md

--- a/_posts/2016-10-29-hello2.md
+++ b/_posts/2016-10-29-hello2.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "Mi primer artículo"
+title:  "Mi primer artículogg"
 date:   2016-10-29 11:46:12 +0100
 categories: drhenry
 ---
 # hola
 
 codigo `codigo`
-```codigo``` kotlin
+```codigo``` 
 
 
 
