--- a/_posts/2016-10-29-prueba2.md
+++ b/_posts/2016-10-29-prueba2.md
@@ -1,6 +1,6 @@
 ---
 layout: post # Sustituye el layout si lo usas uno diferente
-title: prueba2 # Nombre generado automáticamente
+title: "prueba2"
 date:   2016-10-29 18:57:12 +0100
 ---
 
